--- a/css/customstyles/customstyle2.css
+++ b/css/customstyles/customstyle2.css
@@ -12,9 +12,28 @@ h1 {
     background-color: yellow;
 }
 
+nav ul {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(to bottom, yellow, white);
+}
+
+.navigation li{
+    list-style: none;
+}
+
 img{
+    max-width: 100%;
+}
+
+header img{
     width: 340px;
     height: 500px;
+    float: right;
+    margin-right: 60px;
 }
 
 article li {
